--- a/src/ClientLib.Information/Pages/Infographic.razor
+++ b/src/ClientLib.Information/Pages/Infographic.razor
@@ -1,4 +1,4 @@
-@page "/information/infographic/{Id:string}"
+@page "/information/infographic/{Id}"
 @using UnitedSystemsCooperative.Web.ClientLib.Information.Models
 
 <MudContainer MaxWidth="MaxWidth.Large">
