--- a/src/ClientLib.Shared/PaperP.razor
+++ b/src/ClientLib.Shared/PaperP.razor
@@ -5,7 +5,7 @@
 @code {
 
     [Parameter]
-    public int Padding { get; set; }
+    public int Padding { get; set; } = 1;
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
