--- a/src/Client/Pages/Merch.razor
+++ b/src/Client/Pages/Merch.razor
@@ -1,6 +1,6 @@
 @page "/merch"
-@using UnitedSystemsCooperative.Web.Client.Services
-@inject UrlService UrlService
+@using UnitedSystemsCooperative.Web.Client.Interfaces
+@inject IUrlService UrlService
 
 <PageTitle>USC | Merch</PageTitle>
 
