--- a/src/Client/App.razor
+++ b/src/Client/App.razor
@@ -17,6 +17,7 @@
 
     private readonly Assembly[] _additionalAssemblies =
     {
+        typeof(ClientLib.About.Component1).Assembly,
         typeof(ClientLib.Admin.Component1).Assembly,
         typeof(ClientLib.Information.Index).Assembly,
         typeof(ClientLib.Massacre.Component1).Assembly,
