--- a/src/Client/Pages/About/Allies.razor
+++ b/src/Client/Pages/About/Allies.razor
@@ -8,16 +8,16 @@
     <MudText Typo="Typo.h4" Align="Align.Center">Allies</MudText>
     @if (_isLoading)
     {
-        <div>Loading allies</div>
+        <div id="allies-loading">Loading allies</div>
     }
     else
     {
-            @if (_areAlliesLoaded)
-            {
-        <MudPaper>
+        @if (_allies is not null)
+        {
+            <MudPaper>
                 @if (!_allies.Any())
                 {
-                    <div>No allies found</div>
+                    <div id="allies-none">No allies found</div>
                 }
                 else
                 {
@@ -28,31 +28,30 @@
                         }
                     </MudList>
                 }
-        </MudPaper>
-            }
+            </MudPaper>
+        }
+        else
+        {
+            <div id="allies-error">Error accessing Allies.</div>
+        }
     }
 
 </MudContainer>
 
 @code {
-    private bool _isLoading;
-    private bool _areAlliesLoaded = false;
-    private Ally[] _allies = Array.Empty<Ally>();
+    private bool _isLoading = true;
+    private Ally[]? _allies;
 
     protected override async Task OnInitializedAsync()
     {
-        Logger.LogInformation("On Initialized");
-        _allies = Service.GetFromStore().ToArray();
+        _allies = Service.GetFromStore()?.ToArray();
         try
         {
-            if (!_areAlliesLoaded)
-                _isLoading = true;
             _allies = (await Service.GetFromServer()).ToArray();
         }
         finally
         {
             _isLoading = false;
-            _areAlliesLoaded = true;
         }
     }
 
