--- a/src/Client/Pages/About/FleetCarriers.razor
+++ b/src/Client/Pages/About/FleetCarriers.razor
@@ -16,7 +16,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _fleetCarriers = Service.GetFromStore().ToArray();
+        _fleetCarriers = Service.GetFromStore()?.ToArray();
         try
         {
             if(_fleetCarriers == null)
