--- a/src/Client/Pages/Merch.razor
+++ b/src/Client/Pages/Merch.razor
@@ -7,7 +7,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Small">
     <MudText Typo="Typo.h3" Align="Align.Center">USC Merch Store</MudText>
-    <PaperP1>
+    <PaperP Padding="1">
         <div class="text-center">
             <MudText>Click the image or the link below to open the merch store.</MudText>
             <a href="@_merchUrl" target="_blank" rel="noreferrer">
@@ -17,7 +17,7 @@
                 <MudText>Go to Merch Store</MudText>
             </MudLink>
         </div>
-    </PaperP1>
+    </PaperP>
 </MudContainer>
 
 @code {
