--- a/src/Server/Pages/Error.cshtml
+++ b/src/Server/Pages/Error.cshtml
@@ -2,7 +2,7 @@
 @model UnitedSystemsCooperative.Web.Server.Pages.ErrorModel
 
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8" />
